# peptidomicsPy

./: .gitignore  AGENT.md  CITATION.cff  README.ipynb  README.md  pyproject.toml
.migration-artifacts/v1.1.1-alpha/: API_MAPPING.md  COMPILED_CODE_INVENTORY.md  DATA_ASSET_INVENTORY.md  DEPENDENCY_MAP.md  DEVIATION_LOG.md  EXPORTED_API.csv  FIXTURE_CATALOG.md  MIGRATION_MODE_MAP.md  PARITY_PRIORITY_MATRIX.md  PARITY_REPORT.md  RELEASE_CHECKLIST.md  R_PACKAGE_DOSSIER.md  SEMANTIC_RULES.md
examples/data/: Yogurtexample_QR188-205.csv
src/peptidomicspy/: __init__.py  _constants.py  _datasets.py  _plots.py  _processing.py  _result.py  _stats.py  _utils.py
src/peptidomicspy/data/: peptidomics_protein_mapping_example.csv
tests/: conftest.py  manual_validation_v1_1_1_alpha.ipynb  parity_contract.py  test_api_contract.py  test_filter.py  test_plots.py  test_process.py  test_r_parity.py  test_stats.py
tests/fixtures/v1.1.1-alpha/: Intensity_columns.csv  protein_mapping.csv
tests/reference/v1.1.1-alpha/: manifest.json
tools/: build_manual_validation_notebook.py  export_example_mapping.R  freeze_reference.py  generate_r_parity_suite.R  generate_r_reference_outputs.R  render_readme.py
