[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "peptidomicspy"
version = "1.1.1a0"
description = "Python migration of peptidomicsR for peptidomics and protein digestion analysis."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-3.0-or-later" }
authors = [
  { name = "Xuchuan Ma" },
  { name = "Qing Ren", email = "qing.ren@wur.nl" },
]
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "scipy>=1.11",
  "matplotlib>=3.8",
  "plotnine>=0.13",
  "adjustText>=1.3",
  "logomaker>=0.8",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
  "nbclient>=0.10",
  "nbformat>=5.10",
]

[project.urls]
Homepage = "https://github.com/xchuam/peptidomicsPy"
Source = "https://github.com/xchuam/peptidomicsPy"
Issues = "https://github.com/xchuam/peptidomicsPy/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/peptidomicspy"]

[tool.hatch.build.targets.sdist]
include = [
  "/src/peptidomicspy",
  "/examples",
  "/tests",
  "/README.md",
  "/README.ipynb",
  "/README_files",
  "/CITATION.cff",
  "/LICENSE",
  "/pyproject.toml",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
